# altena16

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
altena-core/: Cargo.toml
altena-core/src/: app.rs  font.rs  frame.rs  input.rs  lib.rs  mode.rs  scene.rs  schedule.rs  screen.rs  simulator.rs  testutils.rs  tile.rs  ui.rs
altena-core/src/world/: grid.rs  mod.rs  physics.rs  platformer.rs
altena-devui/: Cargo.toml
altena-web/: Cargo.toml
tools/: alpha.rb  csvis  csvis.r
