[package]
name = "altena-core"
version = "0.0.1"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]

[dependencies]
ansi_term = "0.11"
euclid = "0.17.0"
image = "0.18.0"
piston2d-opengl_graphics = "0.52.0"
num-traits = "0.2.0"
piston2d-graphics = "0.26.0"
piston = "0.36.0"
log = "0.4.1"
tuple-map = {path = "../../tuple-map", version = "0.1.0"}
rusttype = "0.4.1"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window"

[dependencies.rect-iter]
path = "../../rect-iter"
features = ["image"]

